# cellstitch-cuda

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cellstitch/: alignment.py  evaluation.py  frame.py  interpolate.py  pipeline.py  preprocessing.py  preprocessing_cupy.py
cellstitch_cuda/: alignment.py  pipeline.py  postprocessing_cupy.py  preprocessing_cupy.py
dev/: main.py  main_masks.py
examples/: basic_usage.py  run_from_masks.py
scripts/: cupy_vs_numpy.py  main.py  main_load-masks.py
src/cellstitch_cuda/: alignment.py  evaluation.py  frame.py  interpolate.py  pipeline.py  postprocessing_cupy.py  preprocessing_cupy.py  seg_batch.py
