[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellstitch-instanseg"
version = "1.0.0"
description = "CellStitch 3D labeling using Instanseg segmentation"
readme = "README.md"
authors = [{name = "Tom van Leeuwen", email = "t.vanleeuwen@nki.nl"}]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Barcoding", "Polytope", "Fluorescent images"]
dependencies = ["instanseg-torch>=0.0.6", "cellpose>=3.1.0", "POT>=0.8.1", "sphinx", "sphinxcontrib-apidoc", "tifffile", "joblib"]
requires-python = ">=3.9"

[tool.setuptools]
py-modules = []
package-dir = {""="src"}

[tool.mypy]
python_version = '3.9'
mypy_path = ['src']
packages = "cellstitch-instanseg"
strict = true

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"cellstitch/version.py" = [
    "{version}"
]